resolved neighbors issue